# escoba15

./: .gitignore  LICENSE  README.en.md  README.es.md  README.md
cli/: Cargo.toml
cli/src/: main.rs  strings.rs
engine/: Cargo.toml
engine/src/: ai.rs  card.rs  deck.rs  game.rs  lang.rs  lib.rs  player.rs  scoring.rs  wasm.rs
engine/tests/: engine_tests.rs
